# BeyondStars

./: BeyondStars.sln  BeyondStars.vcxproj  BeyondStars.vcxproj.filters  CHANGES  CMakeLists.txt  FAQ  INSTALL  LICENCE  Makefile  README  SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  TODO  alliance.cc  alliance.h  binpackage.sh  calc.cc  calc.h  camera.cc  camera.h  client.cc  client.h  config.h  constants.h  database.cc  database.h  equip.cc  equip.h  error.cc  error.h  frag.cc  frag.h  game.cc  game.h  graphic.cc  graphic.h  header  interface.cc  interface.h  manual.html  (+24 more)
data/: alliances.svd  equip.svd  ships.svd
data/gfx/: index
data/snd/: index
